Enhanced security configurations in Gateway and Properties service for improved PKCE compliance and optimization. Updated frontend code for the properties page.