@@ -2,17 +2,19 @@ package com.example.gateway.security;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.method.configuration.EnableReactiveMethodSecurity;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
+import org.springframework.security.config.web.server.SecurityWebFiltersOrder;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
 import org.springframework.security.web.server.SecurityWebFilterChain;
-import reactor.core.publisher.Mono;
 import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
+import reactor.core.publisher.Mono;
 
 import java.util.Arrays;
 import java.util.List;
@@ -22,17 +24,29 @@ import java.util.List;
 @EnableReactiveMethodSecurity
 public class SecurityConfig {
 
+    private final RedisTemplate<String, Object> redisTemplate;
+
+    public SecurityConfig(RedisTemplate<String, Object> redisTemplate) {
+        this.redisTemplate = redisTemplate;
+    }
+
+    @Bean
+    public CookieToBearerFilter cookieToBearerFilter() {
+        return new CookieToBearerFilter(redisTemplate);
+    }
+
     @Bean
     public SecurityWebFilterChain securityWebFilterChain(ServerHttpSecurity http) {
         http
             .csrf(ServerHttpSecurity.CsrfSpec::disable)
             .authorizeExchange(exchange -> exchange
                 .pathMatchers("/eureka/**").permitAll()
-                .pathMatchers(HttpMethod.GET, "/api/v1/accounts/auth/callback").permitAll()
+                .pathMatchers(HttpMethod.GET, "/api/v1/oauth/callback").permitAll()
                 .pathMatchers(HttpMethod.GET, "/api/v1/accounts/auth/login").permitAll()
-                .pathMatchers(HttpMethod.GET, "/api/v1/accounts/auth/callback").permitAll()
+                .pathMatchers(HttpMethod.POST, "/api/v1/accounts/auth/token").permitAll()
                 .anyExchange().authenticated()
             )
+            .addFilterAt(cookieToBearerFilter(), SecurityWebFiltersOrder.AUTHENTICATION)
             .oauth2ResourceServer(oauth2 -> oauth2.jwt(Customizer.withDefaults()))
             .exceptionHandling(exceptionHandling -> exceptionHandling
                 .authenticationEntryPoint((exchange, ex) -> {
@@ -54,7 +68,17 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(List.of("http://localhost:3001"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "Accept",
+            "Access-Control-Allow-Credentials",
+            "Access-Control-Allow-Origin"
+        ));
+        configuration.setExposedHeaders(Arrays.asList(
+            "Set-Cookie",
+            "Access-Control-Allow-Credentials"
+        ));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L); // Cache preflight request
 
